# DashTUI

./: .gitignore  Cargo.toml  Makefile  README.md  skills-lock.json
src/: cli.rs  error.rs  main.rs
src/commands/: dashboard.rs  git_utils.rs  init.rs  mod.rs  skills.rs
src/db/: mod.rs  storage.rs
src/tui/: app.rs  mod.rs  ui.rs
